examples/type_system/failing/173_perform_missing_dot.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/173_perform_missing_dot.flx
// error[E034]: Missing Effect Operation Separator
//
// This `perform` expression needs `.` between the effect and operation.
//
//   examples/type_system/failing/173_perform_missing_dot.flx:20:20
//    |
// 20 | let x = perform IO print("hi")
//    |                    ^^^^^
//
// Hint:
//   Perform expressions use `perform Effect.op(args...)`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let x = perform IO print("hi")
let after = 1
